<resources>
    <string name="All_drawing_topic">\#全部画题</string>
    <string name="All_subscription">全部订阅</string>
    <string name="Bind_on_account">账号绑定</string>
    <string name="Bind_with_Wechat">微信绑定</string>
    <string name="Bind_with_mobile_number">手机绑定</string>
    <string name="Block">屏蔽动态</string>
    <string name="Blue_sky">蔚蓝天空</string>
    <string name="Brighten">发光</string>
    <string name="Center">中部</string>
    <string name="Change_pen_transparency_and_size">改变画笔透明度和大小</string>
    <string name="Choose_themes">选择主题</string>
    <string name="Danqing_theme">丹青主题</string>
    <string name="Dispersion">色散</string>
    <string name="Embossment">浮雕</string>
    <string name="Energetic_spring_green">活力春绿</string>
    <string name="Forbidden_words">禁言</string>
    <string name="Gaussian_blur">高斯模糊</string>
    <string name="Gender">性别</string>
    <string name="Granule">颗粒</string>
    <string name="Grid">网格/线稿</string>
    <string name="Left_Bottom">左边下部</string>
    <string name="Left_Middle">左边中部</string>
    <string name="Left_Up">左边上部</string>
    <string name="Login_device_management">登录设备管理</string>
    <string name="Middle_Bottom">中间下部</string>
    <string name="Minus_pen_width">减小画笔宽度</string>
    <string name="Mosaic">马赛克</string>
    <string name="Move_canvas">移动画布</string>
    <string name="Multiply">正片叠底</string>
    <string name="Night_black">夜间黑色</string>
    <string name="Normal">正常</string>
    <string name="Oil_painting">油画</string>
    <string name="Phase_reverse">反相</string>
    <string name="Place">地区</string>
    <string name="Plus_pen_width">增加画笔宽度</string>
    <string name="Profile_photo">头像</string>
    <string name="Qiuhao_theme">秋毫主题</string>
    <string name="Resetting_passwords">重置密码</string>
    <string name="Right_Bottom">右边下部</string>
    <string name="Right_Middle">右边中部</string>
    <string name="Right_Up">右边上部</string>
    <string name="Rotate_canvas">旋转画布</string>
    <string name="Sharp">锐化</string>
    <string name="Signature">签名</string>
    <string name="Signature1">签名：</string>
    <string name="Subscribed">已订阅</string>
    <string name="Successfully_cancel">取消成功！</string>
    <string name="Successfully_subscribe">订阅成功！</string>
    <string name="Sweet_pink">甜美粉红</string>
    <string name="Top_Center">中间上部</string>
    <string name="Zoom_in_canvas">放大画布</string>
    <string name="Zoom_out_canvas">缩小画布</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_check_version">检查新版本</string>
    <string name="about_function_intro">功能介绍</string>
    <string name="account_alipay">支付宝账号</string>
    <string name="account_set_paypwd_err">操作失败！</string>
    <string name="account_set_paypwd_ok">支付密码设置成功！</string>
    <string name="account_set_paypwd_tips">请输入支付密码</string>
    <string name="account_set_paypwd_tips_error">两次输入的密码不一致，请重新输入</string>
    <string name="account_set_paypwd_tips_second">请再次填写以确认</string>
    <string name="action_settings">Settings</string>
    <string name="active_work_add_pic_hint">活动作品不能使用添加图片功能</string>
    <string name="activity_about">关于</string>
    <string name="activity_brush">画笔</string>
    <string name="activity_draft">草稿箱</string>
    <string name="activity_feedback">意见反馈</string>
    <string name="activity_paint_album">画集</string>
    <string name="add_album_cover_permission_ratinal">选择本地图片需要读写存储卡权限</string>
    <string name="add_color_to_palette">添加颜色到色卡</string>
    <string name="add_font">添加字体</string>
    <string name="add_layer_out_of_memory">添加图层失败，内存不足</string>
    <string name="add_new_album">新建画集</string>
    <string name="add_pic_disable_hint">会员用户/世界居民 才能使用图片功能，现在去升级吗？</string>
    <string name="add_pic_hint">为了抑制伪造原创，添加的图片会在发布作品时提交到服务器，并在绘画过程中可见。是否继续？</string>
    <string name="add_to_album">加入画集</string>
    <string name="agree">同意</string>
    <string name="agree_control">%1$s同意了您的控制画布请求</string>
    <string name="album_del">删除画集</string>
    <string name="album_edit">编辑画集</string>
    <string name="album_empty_tip">还没有建立画集</string>
    <string name="album_folder">画世界</string>
    <string name="album_manager_str">画集管理</string>
    <string name="album_max_works">最多只能选择%1$d件作品</string>
    <string name="album_new">新建画集</string>
    <string name="album_top">置顶画集</string>
    <string name="album_top_cancel">取消置顶</string>
    <string name="album_work_manage">作品管理(%d/100)</string>
    <string name="all">全部</string>
    <string name="all_people">所有人</string>
    <string name="all_works_title">所有作品</string>
    <string name="allow_recommend_work">允许向我推荐作品</string>
    <string name="already_delete">已删除</string>
    <string name="already_open">已开启</string>
    <string name="already_save_already">已保存</string>
    <string name="already_save_to_album">已存至相册</string>
    <string name="already_select">已选择：%s</string>
    <string name="android_ver_low">抱歉，您的安卓系统版本太低，不支持此功能</string>
    <string name="anonymity">未知作者</string>
    <string name="app_is_newest_version">已经是最新版本啦</string>
    <string name="app_name">画世界</string>
    <string name="app_theme">夜间模式</string>
    <string name="app_use_need_storage_permission">画世界在使用过程中保存数据需要读写存储卡权限</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_control">申请控制</string>
    <string name="apply_explain">申请说明</string>
    <string name="apply_join_group_agreed">您申请的加群“%1$s”已被管理员通过，赶紧去和小伙伴打个招呼吧</string>
    <string name="apply_join_group_refused">您申请的加群“%1$s”已经被管理员拒绝</string>
    <string name="arrive_notification_message">Arrived a notification message. Content is \"%1$s\"</string>
    <string name="ask_create_brush">确定要使用「%1$s」画笔数据创建新的画笔吗？</string>
    <string name="ask_delete_brush">确定要删除「%1$s」画笔吗？</string>
    <string name="ask_reset_brush">确定要将「%1$s」画笔数据设置到初始状态吗？</string>
    <string name="ask_set_default_data">确定要将「%1$s」画笔当前参数保存为初始参数吗？保存后“重置画笔”会将画笔数据设置为这个参数。</string>
    <string name="at_me">\@我的</string>
    <string name="auto_save_pick_color">画布取色加入记忆色</string>
    <string name="auto_save_show_rate_view">自动弹出新建草稿</string>
    <string name="back_page">返回</string>
    <string name="backup_failed_error_code">备份失败</string>
    <string name="backup_success">备份成功</string>
    <string name="base_color">基本色</string>
    <string name="base_color_share">[色卡分享]</string>
    <string name="be_set_as_manager">您被设置为群“%1$s”的管理员</string>
    <string name="begin_fix_draft">开始修复</string>
    <string name="begin_make">开始制作</string>
    <string name="begin_read">开始阅读</string>
    <string name="bei_fen">【备份】</string>
    <string name="black_list">黑名单</string>
    <string name="black_list_hint">确定要将此人加入黑名单吗？拉黑后，将自动取消双方的关注关系，并且被拉黑者将无法对你进行关注/评论/@等操作。</string>
    <string name="block_list">屏蔽列表</string>
    <string name="block_user_hint">确定要屏蔽此人的动态吗？屏蔽操作不会解除双方的好友关系，但你的关注页将不再收到该好友的最新动态。</string>
    <string name="bonus_check_detail">查看领取详情></string>
    <string name="bonus_expired_hint">该红包已过期。未领取的红包过期后会退回</string>
    <string name="bonus_fill">塞红包</string>
    <string name="bonus_msg_default">恭喜发财</string>
    <string name="bonus_opened">已拆开</string>
    <string name="canvas_new">新建草稿</string>
    <string name="choose">选择</string>
    <string name="create_draft_folder">新建文件夹</string>
    <string name="create_group_tip_count">创建数量</string>
    <string name="create_group_tip_level5">等级lv5</string>
    <string name="create_group_tip_level5_count">额外+1个群聊</string>
    <string name="create_group_tip_title">建群资格说明</string>
    <string name="create_group_tip_user">用户</string>
    <string name="create_group_tip_vip">普通会员</string>
    <string name="create_group_tip_vip_count">1个群聊</string>
    <string name="create_group_tip_yearvip">年费会员</string>
    <string name="create_group_tip_yearvip_count">2个群聊</string>
    <string name="delete">删除</string>
    <string name="export">导出</string>
    <string name="got_it">知道了</string>
    <string name="group_manage">群管理</string>
    <string name="group_manager_add_type_any">无需验证直接进群</string>
    <string name="group_manager_add_type_auth">需要验证</string>
    <string name="group_manager_add_type_forbid">不允许任何人进群</string>
    <string name="import_draft">导入备份</string>
    <string name="level_rule1">登录画世界自动获得经验</string>
    <string name="level_rule1_title">登录+5</string>
    <string name="level_rule2">分享作品到第三方平台（微信/QQ/微博等）</string>
    <string name="level_rule2_title">分享+5</string>
    <string name="level_rule3">在作品内容页送小花等礼物获得经验</string>
    <string name="level_rule3_title">送礼物+5</string>
    <string name="level_rule4">发布创作作品可以获得经验</string>
    <string name="level_rule4_title">发布作品+10</string>
    <string name="level_rule5">作品被推荐至专区可以获得经验</string>
    <string name="level_rule5_title">入选专区+50</string>
    <string name="level_rule_tip_title">经验获取说明</string>
    <string name="move_to">移动至</string>
    <string name="rating_attention1">乱涂乱画、描图改图</string>
    <string name="rating_attention1_title">不要捣乱:</string>
    <string name="rating_attention2">画面认真，未达专区水准，有待进步</string>
    <string name="rating_attention2_title">再接再厉:</string>
    <string name="rating_attention3">"形体构图合理、色彩光影协调，其中：
漫画：内容完整、画面清晰
动画：动作流畅、富有创意"</string>
    <string name="rating_attention3_title">推荐专区:</string>
    <string name="rating_attention4">"造型准确、色彩和谐；松弛有度，其中：
漫画：剧本创新，人物立体，画面和谐
动画：故事表述清晰、动作流畅、富有创意"</string>
    <string name="rating_attention4_title">推荐首页:</string>
    <string name="rating_intro_new">"为了您更快了解打分标准，请开始打分考核
考核结果将影响您个人打分区信用度，请认真打分"</string>
    <string name="rating_rule">"1.描图、改图、模板作品不能设置推荐
2.推荐专区作品需主要使用画世界工具创作
3.发现色情、暴力、小广告、伪原创等作品请举报
4.恶意打分将降低个人打分信用度或取消打分资格"</string>
    <string name="rating_rule_title">规则说明</string>
    <string name="rating_standard">打分标准</string>
    <string name="recent_del">最近删除</string>
    <string name="rename">重命名</string>
    <string name="send">发送</string>
    <string name="sort">排序</string>
    <string name="sure">确定</string>
    <string name="upload">上传</string>
    <string name="upload_draft">上传云端</string>
    <string name="work_album_setting">画集设置</string>
    <string name="work_delete">删除作品</string>
    <string name="work_edit">编辑作品</string>
    <string name="work_set_none_top">取消置顶</string>
    <string name="work_set_top">作品置顶</string>
</resources>