<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="?name_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rating_standard" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/rating_attention1_title" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/rating_attention1" android:lineSpacingExtra="@dimen/dp_5" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/rating_attention2_title" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/rating_attention2" android:lineSpacingExtra="@dimen/dp_5" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/rating_attention3_title" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/rating_attention3" android:lineSpacingExtra="@dimen/dp_5" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/rating_attention4_title" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/rating_attention4" android:lineSpacingExtra="@dimen/dp_5" />
    <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="?name_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/rating_rule_title" />
    <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/rating_rule" android:lineSpacingExtra="@dimen/dp_5" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="?time_text_color" android:gravity="center" android:id="@id/test_rating_tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_50" android:text="@string/rating_intro_new" android:lineSpacingExtra="@dimen/dp_5" />
</LinearLayout>