<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/bg_view" android:background="?item_clor" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scroll_view" android:paddingLeft="@dimen/dp_26" android:paddingTop="@dimen/dp_26" android:paddingRight="@dimen/dp_26" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/dp_10" android:layout_above="@id/bottom_relativelayout">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="?name_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/level_rule_tip_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/level_rule1_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/level_rule1" android:lineSpacingExtra="@dimen/dp_5" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/level_rule2_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/level_rule2" android:lineSpacingExtra="@dimen/dp_5" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/level_rule3_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/level_rule3" android:lineSpacingExtra="@dimen/dp_5" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/level_rule4_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/level_rule4" android:lineSpacingExtra="@dimen/dp_5" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="#ff4f91db" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/level_rule5_title" />
            <TextView android:textSize="@dimen/sp_15" android:textColor="?normal_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/level_rule5" android:lineSpacingExtra="@dimen/dp_5" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/bottom_relativelayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="@dimen/sp_15" android:textStyle="bold" android:textColor="@color/white" android:id="@id/get_it_btn" android:layout_width="@dimen/dp_140" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_24" android:text="@string/got_it" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>