<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?dialog_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="?bold_text_color" android:gravity="center" android:id="@id/tv_edit" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/work_edit" style="@style/TimeStyle" />
    <View android:background="?dialog_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" />
    <TextView android:textColor="?bold_text_color" android:gravity="center" android:id="@id/tv_del" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/work_delete" style="@style/TimeStyle" />
    <View android:background="?dialog_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" />
    <TextView android:textColor="?bold_text_color" android:gravity="center" android:id="@id/tv_set_top" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/work_set_top" style="@style/TimeStyle" />
    <View android:background="?dialog_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" />
    <TextView android:textColor="?bold_text_color" android:gravity="center" android:id="@id/tv_un_set_top" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/work_set_none_top" style="@style/TimeStyle" />
    <View android:id="@id/divider_un_set_top" android:background="?dialog_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" />
    <TextView android:textColor="?bold_text_color" android:gravity="center" android:id="@id/tv_album_setting" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/work_album_setting" style="@style/TimeStyle" />
</LinearLayout>