<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/opt_layout" android:background="?tabbar_bg_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/draft_bottom_btn_height" android:layout_alignParentBottom="true">
        <TextView android:textSize="15.0sp" android:textColor="?item_text_color" android:gravity="center" android:id="@id/export_draft" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/export" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?item_text_color" android:gravity="center" android:id="@id/move_draft_to" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/move_to" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?item_text_color" android:gravity="center" android:id="@id/rename_draft" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/rename" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?item_text_color" android:gravity="center" android:id="@id/delete_draft" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?colorAccent" android:gravity="center" android:id="@id/upload_draft" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/upload" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?colorAccent" android:gravity="center" android:id="@id/send_draft" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/send" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="?colorAccent" android:gravity="center" android:id="@id/move_draft_sure" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sure" android:layout_weight="1.0" />
    </LinearLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout android:id="@id/swipe_refresh_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/opt_layout">
        <net.huanci.hsj.view.emptyview.EmptyRecyclerView android:id="@id/recylerview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/recyclerv_item_half_space" android:layout_marginRight="@dimen/recyclerv_item_half_space" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    <include android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/shadow_width" android:layout_above="@id/opt_layout" layout="@layout/shadow_top" />
    <include android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rl_top_content" layout="@layout/view_no_data_and_error" />
</RelativeLayout>